--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,435 +1,2 @@
-:root {
-    /*Defaults — these should be overwritten*/
-    --inside-bg-color: #e2e5e2;
-    --outside-bg-color: #006b75;
-    --code-bg-color: #282c34;
-    --text-color: #2b2b2b;
-    --text-color-inverse: #d4d4d4;
-    --font-size: 14px;
-}
-
-* {
-    letter-spacing: 0;
-    line-height: 1.44;
-    scrollbar-width: auto; /* "auto" or "thin" */
-}
-
-*::selection {
-    background-color: var(--outside-bg-color);
-    color: var(--text-color-inverse);
-}
-
-html {
-    overflow-y: scroll;
-    /*https://stackoverflow.com/a/7607206/7833617*/
-    /* scroll-behavior: smooth; */
-    /* todo this breaks fast scroll, find workaround */
-}
-
-/* pt-mono-regular - latin */
-@font-face {
-    font-family: 'PT Mono';
-    font-style: normal;
-    font-weight: 400;
-    src: url('/static/fonts/pt-mono-v8-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-        url('/static/fonts/pt-mono-v8-latin-regular.eot?#iefix')
-            format('embedded-opentype'),
-        /* IE6-IE8 */ url('/static/fonts/pt-mono-v8-latin-regular.woff2')
-            format('woff2'),
-        /* Super Modern Browsers */
-            url('/static/fonts/pt-mono-v8-latin-regular.woff') format('woff'),
-        /* Modern Browsers */ url('/static/fonts/pt-mono-v8-latin-regular.ttf')
-            format('truetype'),
-        /* Safari, Android, iOS */
-            url('/static/fonts/pt-mono-v8-latin-regular.svg#PTMono')
-            format('svg'); /* Legacy iOS */
-}
-
-body,
-input {
-    font-family: 'PT Mono', monospace !important;
-    font-weight: 400;
-    font-size: var(--font-size);
-    max-width: 42em;
-    margin: auto;
-    color: var(--text-color);
-    background-color: var(--outside-bg-color);
-}
-
-.input {
-    background-color: var(--code-bg-color);
-    color: var(--inside-bg-color);
-    border-radius: 5px;
-    width: 100%;
-    font-size: var(--font-size);
-    height: 2.5em;
-    padding: 0.5ch 0.5ch 0.5ch 0.75ch;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    border: none;
-}
-
-img {
-    width: 100%;
-}
-
-code {
-    font-family: 'PT Mono', monospace !important;
-}
-
-.output {
-    text-align: left;
-    color: var(--inside-bg-color) !important;
-}
-
-/* https://stackoverflow.com/a/43783066/7833617 */
-.select-all,
-.cryptoaddy {
-    -webkit-touch-callout: all; /* iOS Safari */
-    -webkit-user-select: all; /* Safari */
-    -khtml-user-select: all; /* Konqueror HTML */
-    -moz-user-select: all; /* Firefox */
-    -ms-user-select: all; /* Internet Explorer/Edge */
-    user-select: all; /* Chrome and Opera */
-}
-
-body::-webkit-scrollbar {
-    width: 12px;
-    /* width of the entire scrollbar */
-}
-
-body::-webkit-scrollbar-track {
-    background: var(--outside-bg-color);
-    /* color of the tracking area */
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: var(--outside-bg-color);
-    /* color of the scroll thumb */
-    border-radius: 12px;
-    /* roundness of the scroll thumb */
-    border: 2px solid var(--inside-bg-color);
-    /* creates padding around scroll thumb */
-}
-
-p {
-    margin: 0.5em 0;
-}
-
-article p {
-    margin: 0.25em 0 1em;
-}
-
-.box {
-    max-width: 50rem;
-    margin: 2em;
-    border: 3px solid black;
-    padding: 3ch;
-    background: var(--inside-bg-color);
-    overflow-wrap: break-word;
-    vertical-align: middle;
-    margin-top: 3em;
-    box-shadow: 10px 10px black;
-}
-
-#footer {
-    padding-top: 1em;
-}
-
-#footer::before {
-    content: '---\00000a'; /*\00000a = newline*/
-    white-space: pre;
-}
-
-#footerTable {
-    width: 100%;
-}
-#footerTable tr {
-    max-width: 50ch;
-    /* todo this isn't great^ */
-}
-
-#footerTable td:nth-of-type(1) {
-    min-width: 7ch !important;
-}
-
-#footerTable td:nth-of-type(1)::after {
-    content: '  / ';
-}
-
-#footerTable td:nth-of-type(2) {
-    overflow: auto;
-    display: flex;
-    scrollbar-width: none; /* remove scroller in FF */
-}
-
-/* remove scroller in chrome */
-#footerTable td:nth-of-type(2)::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-}
-
-a,
-a:visited {
-    text-decoration: none;
-    box-shadow: inset 0 -0.14em 0 var(--outside-bg-color);
-    color: black;
-    transition-property: background-color;
-    transition-timing-function: ease-in-out;
-    transition-duration: 400ms; /* hover off */
-}
-
-a:hover {
-    background-color: var(--outside-bg-color);
-    color: var(--inside-bg-color);
-    box-shadow: none;
-}
-
-a::selection {
-    background-color: var(--text-color);
-}
-
-a:hover::selection {
-    background-color: var(--text-color-inverse);
-    color: var(--text-color);
-}
-
-a.inverse-bg {
-    color: var(--text-color-inverse);
-    filter: invert(100%);
-}
-
-a.inverse-bg:hover::selection {
-    color: var(--text-color) !important;
-    background-color: var(--text-color-inverse) !important;
-}
-
-a.no-custom {
-    box-shadow: none;
-}
-
-a.no-custom:hover {
-    background-color: transparent;
-    box-shadow: none;
-}
-
-div.nav a[href=''],
-strong {
-    font-weight: 500;
-}
-
-.hljs,
-code {
-    padding: 2px 4px;
-    font-size: 90%;
-    background-color: var(--code-bg-color) !important;
-    color: seashell;
-    border-radius: 4px;
-}
-
-.hljs::selection,
-code::selection,
-.hljs > span::selection {
-    color: limegreen !important;
-    background: black !important;
-}
-
-td.posts {
-    width: fit-content;
-    vertical-align: top;
-}
-
-td.projects-image {
-    width: 35%;
-    vertical-align: top;
-    padding-right: 1em;
-}
-
-td.projects-text {
-    vertical-align: top;
-}
-
-div.nav {
-    font-size: 115%;
-    margin-bottom: 1em;
-}
-
-/* div.nav::after {
-	content: '\00000a---\00000a';
-	white-space: pre;
-} */
-
-div.nav a {
-    margin: 0 0.25em;
-}
-
-div.nav > a:first-child {
-    margin-left: 0 !important;
-}
-
-/* doesn't work — underline from <a> carries */
-/* div.nav a:not(:last-child)::after {
-    content: "/";
-} */
-
-/* this is bad! */
-div:nth-of-type(2) {
-    margin-top: 1em;
-}
-
-span.tab {
-    margin-left: 40px;
-}
-
-span.tab p {
-    margin-top: 0;
-    margin-bottom: 3%;
-}
-
-hr {
-    border-top: 1px dashed #171717;
-}
-
-blockquote > code {
-    font-size: 90% !important;
-    /*white-space: normal;*/
-}
-
-/*div>code {
-	width: 100%;
-	margin-right: 100%;
-	white-space: pre;
-}*/
-
-blockquote > div > p {
-    margin-top: 1em;
-    margin-bottom: 0;
-    display: block;
-}
-
-blockquote {
-    border-left: 10px solid var(--inside-bg-color);
-    filter: brightness(95%);
-    /*botched way to darken the color*/
-    margin: 1em 10px 1.5em;
-    padding: 0.5em 10px;
-    font-size: 90%;
-}
-
-blockquote p {
-    display: inline;
-}
-
-img.dropdown {
-    height: 1.08em;
-    vertical-align: middle;
-    width: initial;
-}
-
-li::marker {
-    content: '- ';
-}
-
-h1,
-h2,
-h3 {
-    font-weight: 700;
-    margin-top: 2em;
-    margin-bottom: 0.25em;
-}
-
-h1 {
-    font-size: 123%;
-}
-h2 {
-    font-size: 112%;
-}
-
-h3 {
-    font-size: 105%;
-}
-
-h1::before {
-    content: '# ';
-}
-
-h2::before {
-    content: '## ';
-}
-
-h3::before {
-    content: '### ';
-}
-
-/*modified from https://github.com/ozh/github-colors*/
-code.tags-py {
-    color: #3caaff;
-}
-
-code.tags-javascript {
-    color: #f1e05a;
-}
-
-code.tags-html {
-    color: #e34c26;
-}
-
-code.tags-css {
-    color: #563d7c;
-}
-
-code.tags-php {
-    color: #5374de;
-}
-
-code.tags-java {
-    color: #b07219;
-}
-
-code.tags-cpp {
-    color: #f34b7d;
-}
-
-code.tags-shell {
-    color: #89e051;
-}
-
-code.tags-go {
-    color: #00add8;
-}
-
-code.tags-bf {
-    color: #2f2530;
-}
-
-code.tags-matlab {
-    color: #e16737;
-}
-
-code.tags-ahk {
-    color: #6594b9;
-}
-
-code.tags-gcode {
-    color: #d08cf2;
-}
-
-code.tags-latex {
-    color: #3d6117;
-}
-
-code.tags-apache {
-    color: #d80044;
-}
-
-code.tags-sheet {
-    color: #00d800;
-}
-
-code.tags-misc {
-    color: #fb00ff;
-}
+﻿@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap");:root{--inside-bg-color: #e2e5e2;--outside-bg-color: #006b75;--code-bg-color: #282c34;--text-color: #2b2b2b;--text-color-inverse: #d4d4d4}*{letter-spacing:0;line-height:1.44;scrollbar-width:auto}*::selection{background-color:var(--outside-bg-color);color:var(--text-color-inverse)}html{overflow-y:scroll}body,input{font-family:"PT Mono",monospace !important;font-weight:400;font-size:14px;max-width:42em;margin:auto;color:var(--text-color);background-color:var(--outside-bg-color)}body::-webkit-scrollbar,input::-webkit-scrollbar{width:12px}body::-webkit-scrollbar-track,input::-webkit-scrollbar-track{background:var(--outside-bg-color)}body::-webkit-scrollbar-thumb,input::-webkit-scrollbar-thumb{background-color:var(--outside-bg-color);border-radius:12px;border:2px solid var(--inside-bg-color)}.input{background-color:var(--code-bg-color);color:var(--inside-bg-color);border-radius:5px;width:100%;font-size:14px;height:2.5em;padding:0.5ch 0.5ch 0.5ch 0.75ch;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;border:none}div.box{max-width:50rem;margin:2em;border:3px solid #000;padding:3ch;background:var(--inside-bg-color);overflow-wrap:break-word;vertical-align:middle;margin-top:3em;box-shadow:10px 10px #000}div.nav{font-size:115%;margin-bottom:1em}div.nav a{margin:0 0.25em}div.nav>a:first-child{margin-left:0 !important}div.nav>a:last-child,div.nav strong{font-weight:600}div:nth-of-type(2){margin-top:1em}img{width:100%}.output{text-align:left;color:var(--inside-bg-color) !important}.select-all,.cryptoaddy{-webkit-touch-callout:all;-webkit-user-select:all;-khtml-user-select:all;-moz-user-select:all;-ms-user-select:all;user-select:all}p{margin:0.5em 0}article p{margin:0.25em 0 1em}#footer{padding-top:1em}#footer::before{content:"---\a";white-space:pre}#footerTable{width:100%}#footerTable tr{max-width:50ch}#footerTable td:nth-of-type(1){min-width:7ch !important}#footerTable td:nth-of-type(1)::after{content:"  / "}#footerTable td:nth-of-type(2){overflow:auto;display:flex;scrollbar-width:none}#footerTable td:nth-of-type(2)::-webkit-scrollbar{width:0;height:0}a,a:visited{text-decoration:none;box-shadow:inset 0 -0.14em 0 var(--outside-bg-color);color:#000;transition-property:background-color;transition-timing-function:ease-in-out;transition-duration:400ms}a.inverse-bg,a:visited.inverse-bg{color:var(--text-color-inverse);filter:invert(100%)}a.inverse-bg:hover::selection,a:visited.inverse-bg:hover::selection{color:var(--text-color) !important;background-color:var(--text-color-inverse) !important}a.no-custom,a:visited.no-custom{box-shadow:none}a.no-custom:hover,a:visited.no-custom:hover{background-color:transparent;box-shadow:none}a:hover,a:visited:hover{background-color:var(--outside-bg-color);color:var(--inside-bg-color);box-shadow:none}a::selection,a:visited::selection{background-color:var(--text-color)}a:hover::selection,a:visited:hover::selection{background-color:var(--text-color-inverse);color:var(--text-color)}.hljs,code{font-family:"PT Mono",monospace !important;padding:2px 4px;font-size:90%;background-color:var(--code-bg-color) !important;color:#fff5ee;border-radius:4px}.hljs::selection,.hljs::selection,.hljs>span::selection,code::selection,code::selection,code>span::selection{color:#32cd32 !important;background:#000 !important}td.posts{width:fit-content;vertical-align:top}td.projects-image{width:35%;vertical-align:top;padding-right:1em}td.projects-text{vertical-align:top}span.tab{margin-left:40px}span.tab p{margin-top:0;margin-bottom:3%}hr{border-top:1px dashed var(--text-color)}blockquote{border-left:10px solid var(--inside-bg-color);filter:brightness(95%);margin:1em 10px 1.5em;padding:0.5em 10px;font-size:90%}blockquote>code{font-size:90% !important}blockquote>div>p{margin-top:1em;margin-bottom:0;display:block}blockquote p{display:inline}img.dropdown{height:1.08em;vertical-align:middle;width:initial}li::marker{content:"- "}h1,h2,h3{font-weight:700;margin-top:2em;margin-bottom:0.25em}h1{font-size:123%}h2{font-size:112%}h3{font-size:105%}h1::before{content:"# "}h2::before{content:"## "}h3::before{content:"### "}code.tags-py{color:#3caaff}code.tags-javascript{color:#f1e05a}code.tags-html{color:#e34c26}code.tags-css{color:#563d7c}code.tags-php{color:#5374de}code.tags-java{color:#b07219}code.tags-cpp{color:#f34b7d}code.tags-shell{color:#89e051}code.tags-go{color:#00add8}code.tags-bf{color:#2f2530}code.tags-matlab{color:#e16737}code.tags-ahk{color:#6594b9}code.tags-gcode{color:#d08cf2}code.tags-latex{color:#3d6117}code.tags-apache{color:#d80044}code.tags-sheet{color:#00d800}code.tags-misc{color:#fb00ff}
+/*# sourceMappingURL=style.css.map */
