--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -48,6 +48,7 @@ input
         border: 2px solid css-var(inside-bg-color) // creates padding around scroll thumb
 
 .input
+    font-family: 'PT Mono', monospace !important
     background-color: css-var(code-bg-color)
     color: css-var(inside-bg-color)
     border-radius: 5px
@@ -61,6 +62,11 @@ input
     -ms-box-sizing: border-box
     box-sizing: border-box
     border: none
+
+select:focus,
+input:focus,
+datalist:focus 
+    outline: 2px solid var(--outside-bg-color);
 
 div
     &.box
