--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,59 +1,2 @@
-/*
-Error: Invalid CSS after "...tside-bg-color)": expected expression (e.g. 1px, bold), was ";"
-        on line 69 of ./static/css/style.sass
-
-64:     border: none
-65: 
-66: select:focus,
-67: input:focus,
-68: datalist:focus 
-69:     outline: 2px solid var(--outside-bg-color);
-70: 
-71: div
-72:     &.box
-73:         max-width: 50rem
-74:         margin: 2em
-
-Backtrace:
-./static/css/style.sass:69
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/script/lexer.rb:240:in `expected!'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/script/parser.rb:897:in `assert_done'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/script/parser.rb:69:in `parse'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/script/parser.rb:228:in `parse'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/script.rb:27:in `parse'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:1169:in `parse_script'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:745:in `parse_property'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:707:in `parse_property_or_rule'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:666:in `parse_line'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:539:in `build_tree'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:558:in `block in append_children'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:557:in `each'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:557:in `append_children'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:548:in `block in build_tree'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:541:in `each'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:541:in `build_tree'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:558:in `block in append_children'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:557:in `each'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:557:in `append_children'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:417:in `_to_tree'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `each'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:294:in `watch'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/plugin.rb:109:in `method_missing'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:358:in `watch_or_update'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:51:in `process_result'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/exec/base.rb:50:in `parse'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/lib/sass/exec/base.rb:18:in `parse!'
-C:/Ruby30-x64/lib/ruby/gems/3.0.0/gems/sass-3.7.4/bin/sass:13:in `<top (required)>'
-C:/Ruby30-x64/bin/sass:23:in `load'
-C:/Ruby30-x64/bin/sass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...tside-bg-color)\": expected expression (e.g. 1px, bold), was \";\"\A         on line 69 of ./static/css/style.sass\A \A 64:     border: none\A 65: \A 66: select:focus,\A 67: input:focus,\A 68: datalist:focus \A 69:     outline: 2px solid var(--outside-bg-color);\A 70: \A 71: div\A 72:     &.box\A 73:         max-width: 50rem\A 74:         margin: 2em"; }
+﻿@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap");:root{--inside-bg-color: #e2e5e2;--outside-bg-color: #006b75;--code-bg-color: #282c34;--text-color: #2b2b2b;--text-color-inverse: #d4d4d4}*{letter-spacing:0;line-height:1.44;scrollbar-width:auto}*::selection{background-color:var(--outside-bg-color);color:var(--text-color-inverse)}html{overflow-y:scroll}body,input{font-family:"PT Mono",monospace !important;font-weight:400;font-size:14px;max-width:42em;margin:auto;color:var(--text-color);background-color:var(--outside-bg-color)}body::-webkit-scrollbar,input::-webkit-scrollbar{width:12px}body::-webkit-scrollbar-track,input::-webkit-scrollbar-track{background:var(--outside-bg-color)}body::-webkit-scrollbar-thumb,input::-webkit-scrollbar-thumb{background-color:var(--outside-bg-color);border-radius:12px;border:2px solid var(--inside-bg-color)}.input{font-family:"PT Mono",monospace !important;background-color:var(--code-bg-color);color:var(--inside-bg-color);border-radius:5px;width:100%;font-size:14px;height:2.5em;padding:.5ch .5ch .5ch .75ch;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;border:none}select:focus,input:focus,datalist:focus{outline:2px solid var(--outside-bg-color)}div.box{max-width:50rem;margin:2em;border:3px solid #000;padding:3ch;background:var(--inside-bg-color);overflow-wrap:break-word;vertical-align:middle;margin-top:3em;box-shadow:10px 10px #000}div.nav{font-size:115%;margin-bottom:1em}div.nav a{margin:0 .25em}div.nav>a:first-child{margin-left:0 !important}div.nav>a:last-child,div.nav strong{font-weight:600}img{width:100%}.output{text-align:left;color:var(--inside-bg-color) !important}.select-all,.cryptoaddy{-webkit-touch-callout:all;-webkit-user-select:all;-khtml-user-select:all;-moz-user-select:all;-ms-user-select:all;user-select:all}p{margin:.5em 0}article p{margin:.25em 0 1em}#footer{padding-top:1em}#footer::before{content:"---\a";white-space:pre}#footerTable{width:100%}#footerTable tr{max-width:50ch}#footerTable td:nth-of-type(1){min-width:7ch !important}#footerTable td:nth-of-type(1)::after{content:"  / "}#footerTable td:nth-of-type(2){overflow:auto;display:flex;scrollbar-width:none}#footerTable td:nth-of-type(2)::-webkit-scrollbar{width:0;height:0}a,a:visited{text-decoration:none;box-shadow:inset 0 -.14em 0 var(--outside-bg-color);color:#000;transition-property:background-color;transition-timing-function:ease-in-out;transition-duration:400ms}a.inverse-bg,a:visited.inverse-bg{color:var(--text-color-inverse);filter:invert(100%)}a.inverse-bg:hover::selection,a:visited.inverse-bg:hover::selection{color:var(--text-color) !important;background-color:var(--text-color-inverse) !important}a.no-custom,a:visited.no-custom{box-shadow:none}a.no-custom:hover,a:visited.no-custom:hover{background-color:transparent;box-shadow:none}a:hover,a:visited:hover{background-color:var(--outside-bg-color);color:var(--inside-bg-color);box-shadow:none}a::selection,a:visited::selection{background-color:var(--text-color)}a:hover::selection,a:visited:hover::selection{background-color:var(--text-color-inverse);color:var(--text-color)}.hljs,code{font-family:"PT Mono",monospace !important;padding:2px 4px;font-size:90%;background-color:var(--code-bg-color) !important;color:#fff5ee;border-radius:4px}.hljs::selection,.hljs::selection,.hljs>span::selection,code::selection,code::selection,code>span::selection{color:#32cd32 !important;background:#000 !important}td.posts{width:fit-content;vertical-align:top}td.projects-image{width:35%;vertical-align:top;padding-right:1em}td.projects-text{vertical-align:top}span.tab{margin-left:40px}span.tab p{margin-top:0;margin-bottom:3%}hr{border-top:1px dashed var(--text-color)}blockquote{border-left:10px solid var(--inside-bg-color);filter:brightness(95%);margin:1em 10px 1.5em;padding:.5em 10px;font-size:90%}blockquote>code{font-size:90% !important}blockquote>div>p{margin-top:1em;margin-bottom:0;display:block}blockquote p{display:inline}img.dropdown{height:1.08em;vertical-align:middle;width:initial}li::marker{content:"- "}h1,h2,h3{font-weight:700;margin-top:2em;margin-bottom:.25em}h1{font-size:123%}h2{font-size:112%}h3{font-size:105%}h1::before{content:"# "}h2::before{content:"## "}h3::before{content:"### "}code.tags-py{color:#3caaff}code.tags-javascript{color:#f1e05a}code.tags-html{color:#e34c26}code.tags-css{color:#563d7c}code.tags-php{color:#5374de}code.tags-java{color:#b07219}code.tags-cpp{color:#f34b7d}code.tags-shell{color:#89e051}code.tags-go{color:#00add8}code.tags-bf{color:#2f2530}code.tags-matlab{color:#e16737}code.tags-ahk{color:#6594b9}code.tags-gcode{color:#d08cf2}code.tags-latex{color:#3d6117}code.tags-apache{color:#d80044}code.tags-sheet{color:#00d800}code.tags-misc{color:#fb00ff}
+/*# sourceMappingURL=style.css.map */
