--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -66,7 +66,7 @@ input
 select:focus,
 input:focus,
 datalist:focus 
-    outline: 2px solid var(--outside-bg-color);
+    outline: 2px solid var(--outside-bg-color)
 
 div
     &.box
