--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -65,10 +65,12 @@ input
     box-sizing: border-box
     border: none
 
-.noscroll::-webkit-scrollbar
-    height: 0 !important
-    width: 0 !important
-    display: none !important
+.noscroll
+    scrollbar-width: none
+    &::-webkit-scrollbar
+        height: 0 !important
+        width: 0 !important
+        display: none !important
 
 
 s
@@ -115,9 +117,8 @@ img
     text-align: left
     color: css-var(inside-bg-color) !important
 
-// //stackoverflow.com/a/43783066/7833617 
-.select-all,
-.cryptoaddy
+// stackoverflow.com/a/43783066/7833617 
+.select-all
     -webkit-touch-callout: all // iOS Safari
     -webkit-user-select: all // Safari
     -khtml-user-select: all // Konqueror HTML
@@ -145,20 +146,17 @@ p
             max-width: 48ch // todo this isn't great
 
         td
+            padding: 0
+
             &:nth-of-type(1)
                 min-width: 7ch !important
 
             &:nth-of-type(1)::after
-                content: '  / '
+                content: '  /'
 
             &:nth-of-type(2)
-                -webkit-touch-callout: all // iOS Safari
-                -webkit-user-select: all // Safari
-                -khtml-user-select: all // Konqueror HTML
-                -moz-user-select: all // Firefox
-                -ms-user-select: all // Internet Explorer/Edge
-                user-select: all // Chrome and Opera
-                
+                @extend .select-all
+                max-width: 46.5ch
                 overflow: auto
                 display: flex
                 scrollbar-width: none // remove scroller in FF
@@ -218,7 +216,7 @@ code
         color: limegreen !important
         background: black !important
 
-pre > code
+pre > code, .codecheat
     // .hljs from atom-one-dark.css line 21
     display: block
     overflow-x: scroll
