fix ff css + cleared tile + keybase

--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -285,6 +285,10 @@ img.dropdown
     vertical-align: middle
     width: initial
 
+ul
+    padding-left: 2ch
+
+
 li
     line-height: 1.44
     vertical-align: inherit
