--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -167,6 +167,8 @@ p
                 height: 0
 
 a,
+a i,
+a b,
 a:visited
     text-decoration: none
     box-shadow: inset 0 -0.14em 0 css-var(outside-bg-color)
