--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -167,15 +167,13 @@ p
                 height: 0
 
 a,
-a i,
-a b,
 a:visited
     text-decoration: none
     box-shadow: inset 0 -0.14em 0 css-var(outside-bg-color)
     color: black
-    transition-property: background-color
-    transition-timing-function: ease-in-out
-    transition-duration: 400ms // hover off
+    transition-property: background-color !important
+    transition-timing-function: ease-in-out !important
+    transition-duration: 400ms !important
 
     &.inverse-bg
         color: css-var(text-color-inverse)
@@ -193,16 +191,16 @@ a:visited
         box-shadow: none
 
     &:hover
-        background-color: css-var(outside-bg-color)
-        color: css-var(inside-bg-color)
-        box-shadow: none
+        background-color: css-var(outside-bg-color) !important
+        color: css-var(inside-bg-color) !important
+        box-shadow: none 
 
     &::selection
-        background-color: css-var(text-color)
+        background-color: css-var(text-color) !important
 
     &:hover::selection
-        background-color: css-var(text-color-inverse)
-        color: css-var(text-color)
+        background-color: css-var(text-color-inverse) !important
+        color: css-var(text-color) !important
 
 .hljs,
 code
