--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@
 * {
   letter-spacing: 0;
   line-height: 1.44;
-  scrollbar-width: auto;
+  scrollbar-width: thin;
 }
 *::selection {
   background-color: var(--outside-bg-color);
@@ -47,145 +47,46 @@ input::-webkit-scrollbar-thumb {
   border: 2px solid var(--inside-bg-color);
 }
 
-.input {
-  font-family: "PT Mono", monospace !important;
-  background-color: var(--code-bg-color);
-  color: var(--inside-bg-color);
-  border-radius: 5px;
-  width: 100%;
-  font-size: 14px;
-  height: 2.5em;
-  padding: 0.5ch 0.5ch 0.5ch 0.75ch;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  border: none;
-}
-
-.noscroll {
-  scrollbar-width: none;
-}
-.noscroll::-webkit-scrollbar {
-  height: 0 !important;
-  width: 0 !important;
-  display: none !important;
-}
-
-s {
-  text-decoration: none;
-  background-image: linear-gradient(transparent 0.5em, #000000 0.5em, #000000 9px, transparent 9px);
-}
-
-select:focus,
-input:focus,
-datalist:focus {
-  outline: 0 solid transparent !important;
-}
-
-div.box {
-  max-width: 50rem;
-  margin: 2em;
-  border: 3px solid black;
-  padding: 3ch;
-  background: var(--inside-bg-color);
-  overflow-wrap: break-word;
-  vertical-align: middle;
-  margin-top: 3em;
-  box-shadow: 10px 10px black;
-}
-div.nav {
-  font-size: 115%;
-  margin-bottom: 1em;
-}
-div.nav a {
-  margin: 0 0.25em;
-}
-div.nav > a:first-child {
-  margin-left: 0 !important;
-}
-div.nav > a:last-child,
-div.nav strong {
-  font-weight: 600;
-}
-
-img {
-  width: 100%;
-}
-
-.output {
-  text-align: left;
-  color: var(--inside-bg-color) !important;
-}
-
-.select-all, #footerTable td:nth-of-type(2) {
-  -webkit-touch-callout: all;
-  -webkit-user-select: all;
-  -khtml-user-select: all;
-  -moz-user-select: all;
-  -ms-user-select: all;
-  user-select: all;
-}
-
-p {
-  margin: 0.5em 0;
-}
-article p {
-  margin: 0.25em 0 1em;
-}
-
-#footer {
-  padding-top: 1em;
-}
-#footer::before {
-  content: "---\a";
-  white-space: pre;
-}
-#footerTable {
-  width: 100%;
-}
-#footerTable tr {
-  max-width: 48ch;
-}
-#footerTable td {
-  padding: 0;
-}
-#footerTable td:nth-of-type(1) {
-  min-width: 7ch !important;
-}
-#footerTable td:nth-of-type(1)::after {
-  content: "  /";
-}
-#footerTable td:nth-of-type(2) {
-  max-width: 46.5ch;
-  overflow: auto;
-  display: flex;
-  scrollbar-width: none;
-}
-#footerTable td:nth-of-type(2)::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
-
 a,
 a:visited {
   text-decoration: none;
   box-shadow: inset 0 -0.14em 0 var(--outside-bg-color);
   color: black;
-  transition-property: background-color !important;
-  transition-timing-function: ease-in-out !important;
-  transition-duration: 400ms !important;
+  transition-property: background-color;
+  transition-timing-function: ease-in-out;
+  transition-duration: 250ms;
+}
+a img,
+a:visited img {
+  margin-bottom: 0;
+}
+a:hover,
+a:visited:hover {
+  background-color: var(--outside-bg-color);
+  color: var(--inside-bg-color);
+  box-shadow: none;
+}
+a:hover::selection, a:hover *::selection,
+a:visited:hover::selection,
+a:visited:hover *::selection {
+  background-color: var(--text-color-inverse);
+  color: var(--text-color);
+}
+a::selection, a *::selection,
+a:visited::selection,
+a:visited *::selection {
+  background-color: var(--text-color);
 }
 a.inverse-bg,
 a:visited.inverse-bg {
   color: var(--text-color-inverse);
   filter: invert(100%);
 }
-a.inverse-bg:hover::selection,
-a:visited.inverse-bg:hover::selection {
-  color: var(--text-color) !important;
-  background-color: var(--text-color-inverse) !important;
+a.inverse-bg:hover::selection, a.inverse-bg:hover *::selection,
+a:visited.inverse-bg:hover::selection,
+a:visited.inverse-bg:hover *::selection {
+  background-color: var(--text-color-inverse);
+  color: var(--text-color);
 }
 a.no-custom,
 a:visited.no-custom {
@@ -194,22 +95,6 @@ a:visited.no-custom {
 a.no-custom:hover,
 a:visited.no-custom:hover {
   background-color: transparent;
-  box-shadow: none;
-}
-a:hover,
-a:visited:hover {
-  background-color: var(--outside-bg-color) !important;
-  color: var(--inside-bg-color) !important;
-  box-shadow: none;
-}
-a::selection,
-a:visited::selection {
-  background-color: var(--text-color) !important;
-}
-a:hover::selection,
-a:visited:hover::selection {
-  background-color: var(--text-color-inverse) !important;
-  color: var(--text-color) !important;
 }
 
 .hljs,
@@ -228,74 +113,78 @@ code > span::selection {
   background: black !important;
 }
 
-pre > code, .codecheat {
+pre > code {
   display: block;
   overflow-x: scroll;
   padding: 0.5em;
   color: var(--text-color-inverse);
   background: var(--code-bg-color);
 }
-pre > code::-webkit-scrollbar, .codecheat::-webkit-scrollbar {
-  width: 1ch;
+pre > code::-webkit-scrollbar {
+  width: 0.66ch;
 }
-pre > code::-webkit-scrollbar-track, .codecheat::-webkit-scrollbar-track {
+pre > code::-webkit-scrollbar-track {
   background: var(--code-bg-color);
   border-radius: 6.25px;
 }
-pre > code::-webkit-scrollbar-thumb, .codecheat::-webkit-scrollbar-thumb {
+pre > code::-webkit-scrollbar-thumb {
   background-color: #323742;
   border-radius: 5px;
 }
 
-td.posts {
-  width: fit-content;
-  vertical-align: top;
+details {
+  padding: 0.4rem 0.75rem;
+  background: var(--code-bg-color);
+  border-radius: 5px;
 }
-td.projects-image {
-  width: 35%;
-  vertical-align: top;
-  padding-right: 1em;
+details[open] {
+  padding-bottom: 0.75rem;
 }
-td.projects-text {
-  vertical-align: top;
+details[open] summary {
+  margin-bottom: 6px;
+}
+details[open] > *:last-child {
+  margin-bottom: 0;
+}
+details pre code {
+  font-size: 87% !important;
+}
+details summary {
+  color: #bcc3cf;
+  cursor: pointer;
+  font-weight: bold;
 }
 
-span.tab {
-  margin-left: 40px;
-}
-span.tab p {
-  margin-top: 0;
-  margin-bottom: 3%;
+img {
+  width: 100%;
 }
 
-hr {
-  border-top: 1px dashed var(--text-color);
+p {
+  margin: 0.5em 0;
+}
+article p {
+  margin: 0.25em 0 1em;
 }
 
 blockquote {
-  border-left: 10px solid var(--inside-bg-color);
+  border-left: 1.25ch solid var(--inside-bg-color);
   filter: brightness(95%);
-  margin: 1em 10px 1.5em;
-  padding: 0.5em 10px;
+  margin: 1em 1.25ch 1.5em;
+  padding: 0.5em 1.25ch;
   font-size: 90%;
 }
 blockquote > code {
   font-size: 90% !important;
-  /**white-space: normal;**/
+  /**white-space: normal;**/tex */
 }
 blockquote > div > p {
   margin-top: 1em;
   margin-bottom: 0;
   display: block;
 }
-blockquote p {
-  display: inline;
-}
-
-img.dropdown {
-  height: 1.08em;
-  vertical-align: middle;
-  width: initial;
+blockquote *:last-child {
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 ul {
@@ -305,18 +194,10 @@ ul {
 li {
   line-height: 1.44;
   vertical-align: inherit;
-  margin: 5px 0px;
+  margin: 0.6ch 0;
 }
-
 li::marker {
   content: "- ";
-}
-
-#sub-posts {
-  margin: 0.5ch 0;
-}
-#sub-posts li::marker {
-  content: "* ";
 }
 
 h1 + h2, h2 + h3, h3 + h4 {
@@ -334,77 +215,128 @@ h3 {
 h1 {
   font-size: 123%;
 }
+h1::before {
+  content: "# ";
+}
 
 h2 {
   font-size: 112%;
+}
+h2::before {
+  content: "## ";
 }
 
 h3 {
   font-size: 105%;
 }
-
-h1::before {
-  content: "# ";
-}
-
-h2::before {
-  content: "## ";
-}
-
 h3::before {
   content: "### ";
 }
 
-code.tags-py {
-  color: #3caaff;
+select:focus,
+input:focus,
+datalist:focus {
+  outline: 0 solid transparent !important;
 }
-code.tags-javascript {
-  color: #f1e05a;
+
+hr {
+  border-top: 1px dashed var(--text-color);
 }
-code.tags-html {
-  color: #e34c26;
+
+s {
+  text-decoration: none;
+  background-image: linear-gradient(transparent 0.5em, #000000 0.5em, #000000 9px, transparent 9px);
 }
-code.tags-css {
-  color: #563d7c;
+
+div.box {
+  max-width: 50rem;
+  margin: 2em;
+  border: 0.4ch solid black;
+  padding: 3ch;
+  background: var(--inside-bg-color);
+  overflow-wrap: break-word;
+  vertical-align: middle;
+  margin-top: 3em;
+  box-shadow: 1.5ch 1.5ch black;
 }
-code.tags-php {
-  color: #5374de;
+
+a button[disabled],
+button[disabled],
+input[type=submit][disabled],
+input[type=reset][disabled],
+input[type=button][disabled] {
+  cursor: default;
+  opacity: 0.5;
+  cursor: not-allowed;
 }
-code.tags-java {
-  color: #b07219;
+
+#footer {
+  padding-top: 1em;
+  width: 100%;
 }
-code.tags-cpp {
-  color: #f34b7d;
+#footer::before {
+  content: "---\a";
+  white-space: pre;
 }
-code.tags-shell {
-  color: #89e051;
+#footer td {
+  padding: 0;
 }
-code.tags-go {
-  color: #00add8;
+#footer td:nth-of-type(1) {
+  min-width: 7ch !important;
 }
-code.tags-bf {
-  color: #2f2530;
+#footer td:nth-of-type(1)::after {
+  content: " /";
 }
-code.tags-matlab {
-  color: #e16737;
+#footer td:nth-of-type(2) {
+  max-width: 46.5ch;
+  overflow: auto;
+  display: flex;
 }
-code.tags-ahk {
-  color: #6594b9;
+
+#sub-posts {
+  margin: 0.5ch 0;
 }
-code.tags-gcode {
-  color: #d08cf2;
+#sub-posts li::marker {
+  content: "* ";
 }
-code.tags-latex {
-  color: #3d6117;
+
+div.nav {
+  font-size: 115%;
+  margin-bottom: 1em;
 }
-code.tags-apache {
-  color: #d80044;
+div.nav > a {
+  margin: 0 0.25em;
 }
-code.tags-sheet {
-  color: #00d800;
+div.nav > a:first-child {
+  margin-left: 0;
 }
-code.tags-misc {
-  color: #fb00ff;
+div.nav > a:last-child,
+div.nav > a strong {
+  font-weight: 600;
+}
+
+img.dropdown {
+  height: 1.08em;
+  vertical-align: middle;
+  width: initial;
+}
+
+.no-scroll, #footer td {
+  scrollbar-width: none;
+}
+.no-scroll::-webkit-scrollbar, #footer td::-webkit-scrollbar {
+  height: 0 !important;
+  width: 0 !important;
+  display: none !important;
+}
+
+.select-all, #footer tr:not(:last-child) td:not(:first-child) {
+  -webkit-touch-callout: all;
+  -webkit-user-select: all;
+  -khtml-user-select: all;
+  -moz-user-select: all;
+  -ms-user-select: all;
+  user-select: all;
 }
 
 /*# sourceMappingURL=style.css.map */
