--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -79,12 +79,31 @@ button
     margin: 0.4em 0.2em
     border-radius: $code-radius
     box-shadow: 4px 4px black
+
+    transition-duration: 250ms
+
+    // dark default
     background-color: var(--code-bg-color)
     color: var(--inside-bg-color)
 
+    @media (prefers-color-scheme: light)
+        background-color: var(--bg-color)
+        color: var(--text-color)
+
     &:hover
-        background-color: rgba(221, 221, 221, 0.712)
-        box-shadow: 4.5px 4.5px black
+        box-shadow: 5px 5px black
+
+        background-color: var(--text-color)
+        color: var(--text-color-inverse)
+        filter: brightness(1.35)
+
+        @media (prefers-color-scheme: light)
+            background-color: rgba(221, 221, 221, 0.7)
+            color: var(--code-bg-color)
+            filter: brightness(0.95)
+
+    &:active // click
+        transform: translateY(2px)
 
 a,
 a:visited
@@ -184,6 +203,9 @@ details
 
 img
     width: 100%
+
+    article &
+        margin: 1em 0 0 0
 
 p
     margin: 0.5em 0
