--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -5,6 +5,7 @@
 // =================
 $font-size: 14px
 $code-radius: 5px
+$transition-time: 250ms
 
 \:root
     --inside-bg-color: #e2e5e2
@@ -65,10 +66,6 @@ input
     height: 2.5em
     padding: 0.5ch 0.5ch 0.5ch 0.75ch
 
-    -webkit-box-sizing: border-box
-    -moz-box-sizing: border-box
-    -o-box-sizing: border-box
-    -ms-box-sizing: border-box
     box-sizing: border-box
     border: none
 
@@ -79,8 +76,7 @@ button
     margin: 0.4em 0.2em
     border-radius: $code-radius
     box-shadow: 4px 4px black
-
-    transition-duration: 250ms
+    transition-duration: $transition-time
 
     // dark default
     background-color: var(--code-bg-color)
@@ -113,9 +109,9 @@ a:visited
     color: black
     transition-property: background-color
     transition-timing-function: ease-in-out
-    transition-duration: 250ms
+    transition-duration: $transition-time
 
-    & img
+    img
         margin-bottom: 0
 
     &:hover
@@ -193,7 +189,7 @@ details
         & >*:last-child
             margin-bottom: 0
 
-    & pre code
+    pre code
         font-size: 87% !important
 
     summary
@@ -228,7 +224,7 @@ blockquote
         margin-bottom: 0
         display: block
 
-    & *:last-child
+    *:last-child
         padding-bottom: 0
         margin-bottom: 0
 
