input border css

--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -67,7 +67,8 @@ input
     padding: 0.5ch 0.5ch 0.5ch 0.75ch
 
     box-sizing: border-box
-    border: none
+    box-shadow: 4px 4px black
+    border-style: outset
 
 button
     font-size: 16px
