--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,8 @@ input {
   height: 2.5em;
   padding: 0.5ch 0.5ch 0.5ch 0.75ch;
   box-sizing: border-box;
-  border: none;
+  box-shadow: 4px 4px black;
+  border-style: outset;
 }
 
 button {
