--- a/static/css/post-color.css
+++ b/static/css/post-color.css
@@ -2,10 +2,17 @@
 /* todo this sucks but is okay atm */
 #colemak-experience {
   box-shadow: inherit;
-  box-shadow: inset 0 -0.14em 0 #b9262e;
+  box-shadow: inset 0 -0.14em 0 #095092;
+}
+#colemak-experience:hover {
+  background-color: #095092;
 }
 
-#colemak-experience:hover {
+#pass {
+  box-shadow: inherit;
+  box-shadow: inset 0 -0.14em 0 #b92626;
+}
+#pass:hover {
   background-color: #b9262e;
 }
 
@@ -13,7 +20,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #004a5d;
 }
-
 #tiling-distance:hover {
   background-color: #004a5d;
 }
@@ -22,7 +28,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #ee3f8c;
 }
-
 #plans-2021:hover {
   background-color: #ee3f8c;
 }
@@ -31,7 +36,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #42c2cb;
 }
-
 #aops-rss:hover {
   background-color: #42c2cb;
 }
@@ -40,7 +44,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #199209;
 }
-
 #use-www:hover {
   background-color: #199209;
 }
@@ -49,7 +52,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #0072c6;
 }
-
 #win-insecure-files:hover {
   background-color: #0072c6;
 }
@@ -58,7 +60,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #093e92;
 }
-
 #what-is-this:hover {
   background-color: #093e92;
 }
@@ -67,7 +68,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #7cab2b;
 }
-
 #calyx:hover {
   background-color: #7cab2b;
 }
@@ -76,7 +76,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #15202b;
 }
-
 #twitter:hover {
   background-color: #15202b;
 }
@@ -85,7 +84,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #d06500;
 }
-
 #nextcloud-calendar:hover {
   background-color: #d06500;
 }
@@ -94,7 +92,6 @@
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #003354;
 }
-
 #nextcloud-guide:hover {
   background-color: #003354;
 }
