--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -138,7 +138,7 @@ a:visited
             background-color: css-var(text-color-inverse)
             color: css-var(text-color)
 
-    &.no-custom
+    &.no-custom, img &
         box-shadow: none
 
         &:hover
