--- a/static/css/post-color.css
+++ b/static/css/post-color.css
@@ -1,5 +1,13 @@
 /* BG Shadow CSS */
 /* todo this sucks but is okay atm */
+#feedback {
+  box-shadow: inherit;
+  box-shadow: inset 0 -0.14em 0 #920954;
+}
+#feedback:hover {
+  background-color: #920954;
+}
+
 #colemak-experience {
   box-shadow: inherit;
   box-shadow: inset 0 -0.14em 0 #2943b6;
