sass dir + upds

--- a/static/css/code-tags.css
+++ b/static/css/code-tags.css
@@ -1,53 +1,1 @@
-code.tags-py {
-  color: #3caaff;
-}
-code.tags-javascript {
-  color: #f1e05a;
-}
-code.tags-html {
-  color: #e34c26;
-}
-code.tags-css {
-  color: #563d7c;
-}
-code.tags-php {
-  color: #5374de;
-}
-code.tags-java {
-  color: #b07219;
-}
-code.tags-cpp {
-  color: #f34b7d;
-}
-code.tags-shell {
-  color: #89e051;
-}
-code.tags-go {
-  color: #00add8;
-}
-code.tags-bf {
-  color: #2f2530;
-}
-code.tags-matlab {
-  color: #e16737;
-}
-code.tags-ahk {
-  color: #6594b9;
-}
-code.tags-gcode {
-  color: #d08cf2;
-}
-code.tags-latex {
-  color: #3d6117;
-}
-code.tags-apache {
-  color: #d80044;
-}
-code.tags-sheet {
-  color: #00d800;
-}
-code.tags-misc {
-  color: #fb00ff;
-}
-
-/*# sourceMappingURL=code-tags.css.map */
+code.tags-py{color:#3caaff}code.tags-javascript{color:#f1e05a}code.tags-html{color:#e34c26}code.tags-css{color:#563d7c}code.tags-php{color:#5374de}code.tags-java{color:#b07219}code.tags-cpp{color:#f34b7d}code.tags-shell{color:#89e051}code.tags-go{color:#00add8}code.tags-bf{color:#2f2530}code.tags-matlab{color:#e16737}code.tags-ahk{color:#6594b9}code.tags-gcode{color:#d08cf2}code.tags-latex{color:#3d6117}code.tags-apache{color:#d80044}code.tags-sheet{color:#00d800}code.tags-misc{color:#fb00ff}/*# sourceMappingURL=code-tags.css.map */
